<resources>
    <string name="app_name">StatisticsApplication</string>
    <string name="timeLabelHomeFrag">Час:</string>
    <string name="dateLabelHomeFrag">Дата:</string>
    <string name="btnIncome">Витрати на паливо</string>
    <string name="btnCosts">Дохід</string>
    <string name="labelHeight">Ширина</string>
    <string name="labelWeidth">Довжина</string>
    <string name="labelArea">Площа</string>
    <string name="labelSumm">Сумма</string>
    <string name="labelPriceOne">Ціна за 0,01га</string>
    <string name="btnCalculate">Обрахувати</string>
    <string name="btnAdd">Записати</string>
    <string name="btnOpen">Відкрити розрахункову панель</string>
    <string name="labelPriceTwo">Ціна за 1 л</string>
    <string name="labeLiter">Кількість літрів</string>
    <string name="labelCostsScreen">Дохід</string>
    <string name="labelIncomeScreen">Витрати</string>
    <string name="labelCostsOne">№ |  Дата  | Сумма</string>
    <string name="lableCostsTwo">№ | Площа | Сумма</string>
    <string name="labelIncomeFrag">№| Дата  | Літри | Сумма</string>
</resources>