<?xml version="1.0" encoding="utf-8"?>
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:layout_margin="5dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelHeight" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelWeidth" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:inputType="numberDecimal"/>

            <EditText
                android:id="@+id/edtWeidth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:inputType="numberDecimal" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelArea" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnCalculateArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCalculate" />

            <EditText
                android:id="@+id/edtArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelSumm" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelPriceOne" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnCalculateSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCalculate" />

            <EditText
                android:id="@+id/edtSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/edtPriceArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnAddCosts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnAdd" />
        </TableRow>
    </TableLayout>
